--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.shuoros</groupId>
+            <artifactId>JCompressor</artifactId>
+            <version>0.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
