--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>io.github.shuoros</groupId>
     <artifactId>JFiler</artifactId>
-    <version>0.0.1</version>
+    <version>1.1.0</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>A library for managing files in Java.</description>
-    <url>https://github.com/shuoros/JFiler-core</url>
+    <url>https://github.com/shuoros/JFiler</url>
     <inceptionYear>2021</inceptionYear>
 
     <properties>
@@ -21,7 +21,7 @@
     <licenses>
         <license>
             <name>MIT License</name>
-            <url>https://github.com/shuoros/JFiler-core/blob/main/LICENSE</url>
+            <url>https://github.com/shuoros/JFiler/blob/main/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -35,15 +35,15 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/shuoros/JFiler-core.git</connection>
-        <developerConnection>scm:git:ssh://github.com:shuoros/JFiler-core.git</developerConnection>
-        <url>https://github.com/shuoros/JFiler-core/tree/main</url>
+        <connection>scm:git:git://github.com/shuoros/JFiler.git</connection>
+        <developerConnection>scm:git:ssh://github.com:shuoros/JFiler.git</developerConnection>
+        <url>https://github.com/shuoros/JFiler/tree/main</url>
         <tag>v0.0.1</tag>
     </scm>
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/shuoros/JFiler-core/issues</url>
+        <url>https://github.com/shuoros/JFiler/issues</url>
     </issueManagement>
 
     <distributionManagement>
